--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,8 +12,11 @@
 <body>
 <h1>Sprint Goals
 </h1>
+<div id ="inputDiv">
 <input type ="text" id = "taskIn" placeholder="Task">
 <button type="button" id = "addButton">Add</button>
+</div>
+
 <h3>Tasks</h3>
     <div id="outputDiv">
     <ul id = "taskOut">
